--- a/TODO/2018-04-14.md
+++ b/TODO/2018-04-14.md
@@ -22,3 +22,9 @@
     2. 有些涉及到私有的配置项还需要梳理
     3. 一些公私钥需要保管
     4. 客户端还没做到通信
+
+* 得跟服务器机房的人说一下，需要给服务器加个内网环境
+  - 给服务器添加路由器，分配内网ip
+  - 这样服务器之间通信只通过内网IP访问
+  - 一些需要通信的服务可以不暴露给外网，比较安全
+  - 内网解析更快，通信效率更高
